--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@ Django==5.0.2
 pandas==2.2.1
 openpyxl==3.1.2
 python-dotenv==1.0.1
-reportlab==4.1.0 
+reportlab==4.1.0
+markdown==3.5.2
+jinja2==3.1.3 
+beautifulsoup4==4.13.0
